4.16.1

2015-04-25  Giovanni Bechis <giovanni@openbsd.org>

	* maildircache.c: fix use after free.

	* mkdhparams: make compatible with libressl

2015-03-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Handle 01-Jan-1970 for date-based searches.

2015-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update to courier-unicode 1.2.

2015-02-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add the makeimapaccess script.

4.16.0

2014-10-21  Bernard Quatermass <bqcourier@quatermass.co.uk>

	* tcpd/libcouriertls.c: add parsing options for different protocol
	combination.

2014-10-21  坂元 英紀 <hs@on-sky.net>

	* Update comments in *ssl config files.

2014-10-15  Rob Austein <sra@hactrn.net>

	* libs/tcpd/libcouriertls.c (tls_create): Set SSL_OP_NOSSLv3 flag,
	to disable SSL3 support.

2014-10-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* mkdhparams: TLS_DHPARAMS environmnt variable overrides default
	DH parameter file location.

	* courier-imap.spec.in: generate the default DH parameter file and
	package it into the rpm, instead of generating one on the first
	start.

2014-10-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/maildir/maildirinfo.c (maildir_info_imapmunge): Fix
	UTF-8 charset name.

2014-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (tls_create): Initialize temporary ecdh
	parameters.

	* imap: try to print a message on stderr if the alarm() call, that
	detects FAM library breakage, goes off.

	* mkdhparams: default to 2048 DH params for OpenSSL.

	* courier-imap.service: bump up startup timeout, initial service start
	may take several minutes to generate DH parameters for the first
	time.
4.15.1

2014-09-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriergnutls.c: remove any slashes from the server
	hostname.

2014-07-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* gpglib, rfc2045: fix makefiles.

2014-07-13  Sam Varshavchik  <mrsam@courier-mta.com>
